--- a/substituicao/style2.css
+++ b/substituicao/style2.css
@@ -33,34 +33,24 @@ a:hover{
     max-width: 97%;
     margin: auto;
     display: flex;
-    max-height: 100%;
+    height: 100%;
+    flex-direction: row;
+    align-items: stretch;
 }
-#divInfo h2:first-child{
+#divInfo div:first-child{
     text-transform: uppercase;
     max-width: 100%;
-    padding: 90px;
-    font-size: 36px;
+    font-size: 22px;
+    vertical-align: 30px;
+    padding: 130px 50px;
     text-align: center;
     background-color: blueviolet;
     text-shadow: 0px 0px 3px white;
 }
-#divInfo img{
-    float: right;
+#divInfo div:last-child{
     display: flex;
-    padding: 0 99px;
-    max-height: 130px;
-    vertical-align: top;
-}
-#divInfo p{
-    max-width: 90%;
-    padding: 60px;
-    font-size: 26px;
-    text-align: justify;
-    line-height: 35pt;
-    font-family: cursive;
-    display: absolute;
-    max-height: 100%;
-    background-color: black;
+    flex-direction: row;
+    align-items: stretch;
 }
 #divCreditos{
     max-width: 97%;
@@ -71,35 +61,31 @@ a:hover{
 }
 #divCifras{
     max-width: 97%;
-    height: 600px;
+    height: 100%;
     margin: auto;
     display: none;
     color: white;
     background-color: black;
 }
 .cards{
+    margin-top: 30%;
     border-style: solid;
-    display: inline-block;
+    padding: 30px;
     background-color: #1c0b2b;
-    width: 180px;
+    width: 140px;
     height: 160px;
-    margin-top: 70px;
-    margin-right: 10px;
-    margin-left: 1px;
     color: white;
     text-align: center;
+    flex-grow: 1;
+    vertical-align: 30px;
     text-transform: uppercase;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .cards:hover{
     border-style: solid;
-    display: inline-block;
     color: #1c0b2b;
-    width: 180px;
+    width: 140px;
     height: 160px;
-    margin-top: 70px;
-    margin-right: 10px;
-    margin-left: 1px;
     background-color: white;
     text-align: center;
     text-transform: uppercase;
@@ -110,6 +96,7 @@ a:hover{
     margin: auto;
     padding: 40px;
     width: 84%;
+    height: 100%;
 
 }
 .titu{
@@ -122,4 +109,13 @@ a:hover{
 
 #div_maeCifra h4{
     margin-top: 59px;
+}
+#container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: center; 
+    gap: 4px;
+    flex-grow: 1;
 }
